--- a/public/style.css
+++ b/public/style.css
@@ -304,9 +304,9 @@ body{
 }
 
 .hotel-info{
-
   display: grid;
   grid-template-columns: 50% 50%;
+  
 }
 
 .hotel-title h3 {
@@ -346,7 +346,35 @@ body{
   margin-top: 0;
 }
 
+.room-quantity {
+  margin-left: 30%;
+  margin-top: 20px;
+  font-weight: bolder;
+}
 
+.hotel-availableDate {
+  display: grid;
+  grid-template-columns: 50% 50%;
+  
+}
+
+.book-button {
+  background-color: blue;
+  color: white;
+  height: 50px;
+  padding: 20px;
+  margin-left: 30px;
+  margin-top: 30px;
+  border-radius: 10px;
+  border: none;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  width: 100px;
+  transition: all 0.5s ease-in-out;
+}
+
+.book-button:hover{
+  background-color: rgb(76, 121, 193);
+}
 
 
 
