--- a/public/style.css
+++ b/public/style.css
@@ -87,6 +87,10 @@ body, html {
   background-repeat: no-repeat;
 }
 
+#header-background{
+  height: 60%;
+}
+
 .title{
   color: rgb(0, 0, 0);
   font-weight: bolder;
@@ -287,7 +291,6 @@ body{
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
 
-
   width: 100%;
   height: 50%;
 
@@ -382,7 +385,110 @@ body{
   background-color: rgb(76, 121, 193);
 }
 
+/* For hotel Booking page */
+.user-booking-info{
+  display: grid;
+  grid-template-columns: 50% 50%;
+  gap: 20px;
+}
+.room-info{
+  align-self: center;
+  color: #153450;
+  font-weight: bold;
+}
 
+.inputContainer {
+  font-weight: bold;
+  color: #153450;
+  padding: 20px;
+}
+
+.user-info-container {
+  background-color: #8FBCDB;
+  /* margin-right: 10%; */
+  margin-top: 20px;
+  margin-left: 15%;
+  padding: 10px;
+  border-radius: 20px;
+  height: 500px;
+  box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px, rgba(6, 24, 44, 0.65) 0px 4px 6px -1px, rgba(255, 255, 255, 0.08) 0px 1px 0px inset;
+
+  display: flex;
+  flex-direction: column;
+}
+
+.textInput {
+  width: 100%;
+  margin-top: 10px;
+  background-color: #e9e9e9;
+  border-style: none;
+  border-color: #e9e9e9;
+  transition: 0.3s;
+  height: 40px;
+  border-radius: 5px;
+  padding: 10px;
+}
+
+.user-room-container{
+  margin-top: 20px;
+}
+.user-room-card {
+  background-color: #8FBCDB;
+  margin-right: 15%;
+  border-radius: 20px;
+  height: 520px;
+
+  display: grid;
+  grid-template-rows: 50% 50%;
+  box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px, rgba(6, 24, 44, 0.65) 0px 4px 6px -1px, rgba(255, 255, 255, 0.08) 0px 1px 0px inset;
+}
+
+.user-room-info {
+
+  border-bottom-left-radius: 20px;
+  border-bottom-right-radius: 20px;
+  color: #153450;
+
+  display: grid;
+  grid-template-rows: 15% 29% 1% 55%;
+
+}
+
+.price-details{
+  display: grid;
+  grid-template-columns: 50% 50%;
+  margin-bottom: 20px;
+  /* margin-left: 20px; */
+}
+.checkinDate {
+  position: relative;
+  top:-10; 
+}
+
+.grid-element {
+  height: 8px;
+}
+
+.user-room-info > * {
+  margin-left: 20px;
+}
+
+.confirm-container {
+  display: grid;
+  grid-template-columns: 60% 40%;
+}
+
+.confirm-button {
+  background: rgba(4, 132, 4, 0.824);
+  height: 50px;
+  width: 150px;
+  padding: auto;
+  border: none;
+  margin: auto;
+  border-radius: 10px;
+  color: white;
+
+}
 
 @media only screen and (max-width: 1300px) and (min-width: 1200px) {
   .destinationChoose {
