--- a/public/style.css
+++ b/public/style.css
@@ -7,6 +7,16 @@
   z-index: 5;
 }
 
+.navBar1 {
+  display: grid;
+  gap: 0px;
+  opacity: 0.9;
+  grid-template-columns:  30% 70% ;
+  position: fixed;
+  width: 100%;
+  z-index: 5;
+}
+
 .toggle-button{
   position: absolute;
   top: .75rem;
@@ -27,7 +37,7 @@
 
 .nav-scrolled{
   background-color: #474747;
-  opacity: 0.9;
+  opacity: 0.7;
 }
 
 body{
@@ -110,6 +120,16 @@ body, html {
 
 }
 
+.title4{
+  color: rgb(255, 255, 255);
+  font-weight: bolder;
+  font-family: Clarkson,Helvetica,sans-serif;
+  font-size: 20px;
+  text-align: start;
+
+}
+
+
 
 
 .title3{
@@ -164,6 +184,21 @@ body, html {
   transition: 0.3s;
 }
 
+.searchBar4 {
+  border-radius: 10px;
+  width: 300px;
+  color:#000000;
+  background-color: rgb(222, 195, 195);
+  border-style: solid;
+  border-color: rgb(222, 195, 195);
+  padding: 15px 15px 15px 15px;
+  transition: 0.3s;
+}
+
+.searchBar4:hover{
+  background-color: rgb(220, 161, 161);
+  border-color: rgb(220, 156, 156);
+}
 .searchBar:hover{
   background-color: rgb(195, 195, 195);
   border-color: rgb(195, 195, 195);
@@ -306,6 +341,12 @@ body{
   overflow: hidden;
 }
 
+.gridDescription {
+  display: grid;
+  grid-template-columns: 35% 65%; 
+
+}
+
 .hotel-info{
   display: grid;
   grid-template-columns: 50% 50%;
@@ -368,7 +409,7 @@ body{
 }
 
 .book-button {
-  background-color: blue;
+  background-color: rgb(244, 44, 44);
   color: white;
   height: 50px;
   padding: 20px;
@@ -378,11 +419,11 @@ body{
   border: none;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   width: 100px;
-  transition: all 0.5s ease-in-out;
+  transition: 0.3s;
 }
 
 .book-button:hover{
-  background-color: rgb(76, 121, 193);
+  background-color: rgb(221, 92, 92);
 }
 
 /* For hotel Booking page */
@@ -566,7 +607,6 @@ body{
   #navBar{
     display: block;
     background-color:#474747;
-    opacity: 0.8;
   }
 
   #navBar .title{
@@ -608,6 +648,7 @@ body{
       gap: 20px;
       height: 40px;
   }
+
 
   .searchButton{
       width: 80%;
