--- a/public/style.css
+++ b/public/style.css
@@ -409,7 +409,7 @@ body{
 }
 
 .book-button {
-  background-color: rgb(244, 44, 44);
+  background-color: rgb(255, 0, 0);
   color: white;
   height: 50px;
   padding: 20px;
@@ -419,18 +419,20 @@ body{
   border: none;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   width: 100px;
-  transition: 0.3s;
+  transition: all 0.5s ease-in-out;
 }
 
 .book-button:hover{
-  background-color: rgb(221, 92, 92);
+  background-color: rgb(193, 76, 76);
 }
 
 /* For hotel Booking page */
 .user-booking-info{
   display: grid;
-  grid-template-columns: 50% 50%;
-  gap: 20px;
+  grid-template-columns: 30% 70%;
+  gap: 100px;
+  margin-left: 10%;
+  margin-right: 10% ;
 }
 .room-info{
   align-self: center;
@@ -474,15 +476,15 @@ body{
   margin-top: 20px;
 }
 .user-room-card {
-  background-color: #8FBCDB;
+  background-color: rgb(222, 195, 195);
   margin-right: 15%;
+  margin-top: 100px;
   border-radius: 20px;
-  height: 520px;
+  height: 300px;
 
-  display: grid;
-  grid-template-rows: 50% 50%;
-  box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px, rgba(6, 24, 44, 0.65) 0px 4px 6px -1px, rgba(255, 255, 255, 0.08) 0px 1px 0px inset;
+
 }
+
 
 .user-room-info {
 
